--- a/Survey/Classes/Survey Manager/View Controllers/RatingViewController.xib
+++ b/Survey/Classes/Survey Manager/View Controllers/RatingViewController.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -26,11 +25,11 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="axG-11-bjr" customClass="DraggableView" customModule="Feedback" customModuleProvider="target">
+                <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="axG-11-bjr" customClass="DraggableView" customModule="Feedback" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="783" width="414" height="113"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aR0-p5-Dfi">
@@ -153,16 +152,15 @@
                     </connections>
                 </button>
             </subviews>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="luR-eH-Dfn" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="1rp-fz-1JI"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="luR-eH-Dfn" secondAttribute="trailing" id="CjU-27-Jx8"/>
+                <constraint firstAttribute="trailing" secondItem="luR-eH-Dfn" secondAttribute="trailing" id="CjU-27-Jx8"/>
                 <constraint firstItem="axG-11-bjr" firstAttribute="top" secondItem="luR-eH-Dfn" secondAttribute="bottom" id="IOv-nc-nrj"/>
-                <constraint firstItem="axG-11-bjr" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="YE0-qj-NoX"/>
+                <constraint firstItem="luR-eH-Dfn" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="K7O-HW-bU2"/>
+                <constraint firstItem="axG-11-bjr" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="YE0-qj-NoX"/>
                 <constraint firstAttribute="bottom" secondItem="axG-11-bjr" secondAttribute="bottom" id="axD-5H-hmG"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="axG-11-bjr" secondAttribute="trailing" id="eVz-HV-NZ0"/>
-                <constraint firstItem="luR-eH-Dfn" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="wOT-L3-rdV"/>
+                <constraint firstAttribute="trailing" secondItem="axG-11-bjr" secondAttribute="trailing" id="eVz-HV-NZ0"/>
             </constraints>
             <point key="canvasLocation" x="28.985507246376812" y="91.741071428571431"/>
         </view>
